# Kast

./: .gitignore  BMP_280.cpp  BMP_280.h  CMakeLists.txt  DS_3231.cpp  DS_3231.h  Makefile  README.md  To Do.txt  adc.cpp  adc.h  alarm.cpp  alarm.h  board.h  climateControl.cpp  climateControl.h  datetime.h  helper.h  hterm.cfg  i2c.cpp  i2c.h  main.cpp  nvm.cpp  nvm.h  pdm.cpp  pdm.h  plants.cpp  plants.h  systemTimer.cpp  systemTimer.h  systemTimer_test  todo.txt  uart.cpp  uart.h  uartCallback.h
docs/: EEPROM_DESIGN_DOCUMENT  Notes  todo.txt
src/: BMP_280.cpp  BMP_280.h  Board.h  ClimateControl.h  DS_3231.h  I2c.cpp  I2c.h  ISystemTimerClient.h  Main.cpp  Makefile  NvmStore.h  Pdm.cpp  Pdm.h  Spi.h  SystemTimer.cpp  SystemTimer.h  SystemTimerClient.h  TimedEvent.h  TimedEvent_t.h  adc.cpp  adc.h  alarm.cpp  climateControl.cpp  commandHandler.cpp  datetime.h  helper.h  i2c.h  lcd.h  main.cpp  pdm.cpp  pdm.h  spi.cpp  systemTimer.cpp  systemTimer.h  uart.h
tests/: RealTimeClock_test.cpp  SystemTimerClientMock.h  SystemTimer_test.cpp  systemTimer_test.cpp
tools/: install-avr-dependencies-freebsd.sh  install-avr-dependencies.sh  install_hterm.sh  install_minicom-freebsd.sh  pre-build.sh
